server render improvement with new auth system, POST is supported in external tools

--- a/sumeru/src/assets/css/transition.css
+++ b/sumeru/src/assets/css/transition.css
@@ -249,3 +249,207 @@ html,body{
     width:100%;
     height: 100%;
 }
+/*
+ * add moz hack
+ */
+.wrap,._smr_runtime_wrapper{
+    -moz-perspective: 1000;
+    -moz-overflow-scrolling: touch;
+}
+.__viewBlock__ {
+    -moz-backface-visibility:hidden;
+}
+.transi{
+    -moz-transition: all 0.5s ease-in-out;
+}
+.animated{
+    -moz-animation-duration: 1s;
+    -moz-animation-fill-mode: both;
+    -moz-backface-visibility:hidden;
+    -moz-overflow-scrolling: touch;
+}
+._g_flip_left_sw,._g_flip_left_hd,
+._g_flip_right_sw,._g_flip_right_hd {
+    -moz-transform-style: preserve-3d;
+}
+@-moz-keyframes _g_flip_left_sw { 
+    0%  { -moz-transform: rotateY(91deg)}
+    55%         { -moz-transform: rotateY(91deg)}
+    100%        { -moz-transform: rotateY(0deg)}
+}
+._g_flip_left_sw {
+    -moz-animation-name: _g_flip_left_sw;
+}
+._g_flip_left_sb {
+    -moz-transform: rotateY(91deg)
+}
+@-moz-keyframes _g_flip_left_hd { 
+    0%  { -moz-transform: rotateY(0deg)}
+    50%         { -moz-transform: rotateY(-91deg)}
+    100%        { -moz-transform: rotateY(-91deg)}
+}
+._g_flip_left_hd{
+    -moz-animation-name: _g_flip_left_hd;
+}
+@-moz-keyframes _g_flip_right_sw { 
+    0%  { -moz-transform: rotateY(-91deg)}
+    55%         { -moz-transform: rotateY(-91deg)}
+    100%        { -moz-transform: rotateY(0deg)}
+}
+._g_flip_right_sw{
+    -moz-animation-name: _g_flip_right_sw;
+}
+._g_flip_right_sb{
+    -moz-transform: rotateY(-91deg)
+}
+@-moz-keyframes _g_flip_right_hd { 
+    0%  { -moz-transform: rotateY(0deg)}
+    50%         { -moz-transform: rotateY(91deg)}
+    100%        { -moz-transform: rotateY(91deg)}
+}
+._g_flip_right_hd{
+    -moz-animation-name: _g_flip_right_hd;
+}
+@-moz-keyframes _g_fade_sw {
+    0%{-moz-opacity: 0;display:block;z-index:10;}   
+    50% {-moz-opacity: 0.8;}
+    100% {-moz-opacity: 1;}
+}
+
+._g_fade_sw {
+    -moz-animation-name: _g_fade_sw;
+}
+
+@-moz-keyframes _g_fade_hd {
+    0%{-moz-opacity 1;} 
+    50% {-moz-opacity: 0.2;}
+    100% {-moz-opacity: 0;display:none;z-index:1;}
+}
+
+._g_push_top_sw{
+    -moz-transform:translateY(0);
+}
+._g_push_top_sb{
+    -moz-transform:translateY(100%);
+}
+._g_push_top_hd{
+    -moz-transform:translateY(-100%);
+}
+._g_push_right_sw{
+    -moz-transform:translateX(0);
+}
+._g_push_right_sb{
+    -moz-transform:translateX(100%);
+}
+._g_push_right_hd{
+    -moz-transform:translateX(-100%);
+}
+._g_push_bottom_sw{
+    -moz-transform:translateY(0);
+}
+._g_push_bottom_sb{
+    -moz-transform:translateY(-100%);
+}
+._g_push_bottom_hd{
+    -moz-transform:translateY(100%);
+}
+._g_push_left_sw{
+    -moz-transform:translateX(0);
+}
+._g_push_left_sb{
+    -moz-transform:translateX(-100%);
+}
+._g_push_left_hd{
+    -moz-transform:translateX(100%);
+}
+
+._g_rotate_left_sw,
+._g_rotate_left_sb,
+._g_rotate_left_hd,
+._g_rotate_right_sw,
+._g_rotate_right_sb,
+._g_rotate_right_hd
+{
+    -moz-transform-origin:left bottom;
+}
+._g_rotate_left_sw{
+}
+._g_rotate_left_sb{
+    -moz-transform:rotate(90deg);
+}
+._g_rotate_left_hd{
+    -moz-transform:rotate(-90deg);
+}
+
+._g_rotate_right_sw{
+}
+._g_rotate_right_sb{
+    -moz-transform:rotate(-90deg);
+}
+._g_rotate_right_hd{
+    -moz-transform:rotate(90deg);
+}
+
+._g_shake_left_sw{
+    -moz-transform:scale(1);
+}
+._g_shake_left_sb{
+    -moz-transform:translateX(100%);
+}
+._g_shake_left_hd{
+    -moz-transform:scale(0);
+}
+._g_shake_right_sw{
+    -moz-transform:scale(1);
+}
+._g_shake_right_sb{
+    -moz-transform:translateX(-100%);
+}
+._g_shake_right_hd{
+    -moz-transform:scale(0);
+}
+
+
+._g_flip_front,._g_flip_back,._g_flip_card{
+    -moz-transform-style:preserve-3d;
+}
+._g_flip_front,._g_flip_back{
+    -moz-backface-visibility: hidden;
+}
+._g_flip_back{
+    -moz-transform:rotateY(180deg) translate3d(0,0,0);
+}
+
+._g_flip_card_left{
+    -moz-animation-name:_g_flip_card_left;
+}
+._g_flip_card_right{
+    -moz-animation-name:_g_flip_card_right;
+}
+._g_flip_card_left_def{
+    -moz-animation-name:_g_flip_card_left_def;
+}
+._g_flip_card_right_def{
+    -moz-animation-name:_g_flip_card_right_def;
+}
+
+@-moz-keyframes _g_flip_card_left{
+        0%  { -moz-transform: rotateY(0deg)}
+        100%        { -moz-transform: rotateY(180deg)}
+}
+
+@-moz-keyframes _g_flip_card_right {
+        0%  { -moz-transform: rotateY(0deg)}
+        100%        { -moz-transform: rotateY(-180deg)}
+}
+@-moz-keyframes _g_flip_card_left_def {
+        0%  { -moz-transform: rotateY(180deg)}
+        100%        { -moz-transform: rotateY(0deg)}
+}
+@-moz-keyframes _g_flip_card_right_def {
+        0%  { -moz-transform: rotateY(-180deg)}
+        100%        { -moz-transform: rotateY(0deg)}
+}
+._g_flip_card{
+    -moz-transform-style: preserve-3d;
+}
